wip, add location and search by location

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,7 +43,7 @@
 
 body {
   background-color: #586581;
-  background-image: url("hiker.jpg");
+  background-image: url("hiker1.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
