--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,7 @@
       <li> Name : <%= @user.first_name %> <%= @user.last_name %></li>
       <li> Username: <%= @user.username %> </li>
       <li> E-mail: <%= @user.email %> </li>
+      <li> Location: <%= @user.location %></li>
     </ul>
       <%= link_to "Edit My Profile", edit_user_registration_path, class: "button radius" %>
   </div>
