--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,6 +18,11 @@
       <%= devise_error_messages! %>
 
       <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email %>
+      </div>
+
+      <div class="field">
         <%= f.label :username %><br />
         <%= f.text_field :username, autofocus: true %>
       </div>
@@ -33,8 +38,9 @@
       </div>
 
       <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email %>
+        <%= f.label :location %>
+        <em>(Enter City & State or Zip Code)</em>
+        <%= f.text_field :location %>
       </div>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -67,12 +73,12 @@
     <% end %>
   </div>
 </div>
-
+<br>
 <div class="row">
   <div class="medium-12 medium-centered text-center columns">
-    <h5>Cancel my account</h5>
+    <h5>Unhappy?</h5>
 
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "button alert radius small" %></p>
+    <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "button alert radius small" %>
   </div>
 </div>
 
