--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,6 +35,12 @@
       </div>
 
       <div class="field">
+        <%= f.label :location %>
+        <em>(Enter City & State or Zip Code)</em>
+        <%= f.text_field :location %>
+      </div>
+
+      <div class="field">
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
