--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -37,54 +37,54 @@
       <h3> Backpacks </h3>
 
       <%= label_tag(:search, "Search by Model Name or Brand") %>
-      <%= text_field_tag(:search) %>
+      <%= text_field_tag('pack[search]') %>
 
       <%= label_tag(:capacity) %>
-      <%= select_tag :capacity, options_for_select(15..115), include_blank: true %>
+      <%= select_tag 'backpack[capacity]', options_for_select(15..115), include_blank: true %>
 
       <%= label_tag(:size) %>
-      <%= select_tag :size, options_for_select(Backpack::SIZES), include_blank: true %>
+      <%= select_tag 'backpack[size]', options_for_select(Backpack::SIZES), include_blank: true %>
 
       <%= label_tag(:gender) %>
-      <%= select_tag :gender, options_for_select(Backpack::GENDER), include_blank: true %>
+      <%= select_tag 'backpack[gender]', options_for_select(Backpack::GENDER), include_blank: true %>
 
       <%= label_tag(:condtion) %>
-      <%= select_tag :condtion, options_for_select(Backpack::CONDITION), include_blank: true %>
+      <%= select_tag 'backpack[condtion]', options_for_select(Backpack::CONDITION), include_blank: true %>
     </div>
 
     <div class="medium-12 medium-centered columns" id="tent">
       <h3> Tents </h3>
 
       <%= label_tag(:search, "Search by Model Name or Brand") %>
-      <%= text_field_tag(:search) %>
+      <%= text_field_tag('tent[search]') %>
 
       <%= label_tag(:capacity) %>
-      <%= select_tag :capacity, options_for_select(1..8), include_blank: true %>
+      <%= select_tag 'tent[capacity]', options_for_select(1..8), include_blank: true %>
 
       <%= label_tag(:use) %>
-      <%= select_tag :use, options_for_select(Tent::USE), include_blank: true %>
+      <%= select_tag 'tent[use]', options_for_select(Tent::USE), include_blank: true %>
 
       <%= label_tag(:condtion) %>
-      <%= select_tag :condtion, options_for_select(Backpack::CONDITION), include_blank: true %>
+      <%= select_tag 'tent[condtion]', options_for_select(Backpack::CONDITION), include_blank: true %>
     </div>
 
     <div class="medium-12 medium-centered columns" id="sleepingbag">
       <h3> Sleepingbags </h3>
 
       <%= label_tag(:search, "Search by Model Name or Brand") %>
-      <%= text_field_tag(:search) %>
+      <%= text_field_tag('sleepingbag[search]') %>
 
       <%= label_tag(:temp_rating) %>
-      <%= select_tag :temp_rating, options_for_select(50.downto(-40)), include_blank: true %>
+      <%= select_tag 'sleepingbag[temp_rating]', options_for_select(50.downto(-40)), include_blank: true %>
 
       <%= label_tag(:size) %>
-      <%= select_tag :size, options_for_select(Sleepingbag::SIZES), include_blank: true %>
+      <%= select_tag 'sleepingbag[size]', options_for_select(Sleepingbag::SIZES), include_blank: true %>
 
       <%= label_tag(:fill) %>
-      <%= select_tag :fill, options_for_select(Sleepingbag::FILL), include_blank: true %>
+      <%= select_tag 'sleepingbag[fill]', options_for_select(Sleepingbag::FILL), include_blank: true %>
 
       <%= label_tag(:condtion) %>
-      <%= select_tag :condtion, options_for_select(Sleepingbag::CONDITION), include_blank: true %>
+      <%= select_tag 'sleepingbag[condition]', options_for_select(Sleepingbag::CONDITION), include_blank: true %>
     </div>
   </div>
 </div>
