--- a/app/views/tents/index.html.erb
+++ b/app/views/tents/index.html.erb
@@ -16,6 +16,6 @@
 <br>
 <div class="row">
   <div class="medium-4 text-center columns" id="box">
-    <%= paginate @tents %>
+    <h6><%= paginate @tents %></h6>
   </div>
 </div>
