--- a/app/views/sleepingbags/index.html.erb
+++ b/app/views/sleepingbags/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 <br>
 <div class="row">
-  <div class="medium-4 columns" id="box">
-    <%= paginate @sleepingbags %>
+  <div class="medium-4 text-center columns" id="box">
+    <h6><%= paginate @sleepingbags %></h6>
   </div>
 </div>
