wunderground api working well

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -111,7 +111,7 @@
     <h3> Trip Planner </h3>
       <%= form_tag trips_path, method: "get" do %>
 
-        <%= text_field_tag(:destination, nil, placeholder: "Enter the Zip Code for Your Destination") %>
+        <%= text_field_tag(:destination, nil, placeholder: "Enter City & State or Zip for Your Destination") %>
 
         <div class="row">
           <div class="medium-5 columns float left">
