--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -210,9 +210,9 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-$header-font-family: KGFallForYou;
+$header-font-family: 'Patrick Hand', cursive;
 // $header-font-weight: $font-weight-normal;
-$header-font-style: small-caps;
+// $header-font-style: small-caps;
 $header-font-color: black;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
@@ -220,7 +220,7 @@ $header-font-color: black;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-$h1-font-size: rem-calc(55);
+$h1-font-size: rem-calc(45);
 // $h2-font-size: rem-calc(37);
 // $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
