--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='http://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
   <title>HappyCamper</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
@@ -8,9 +9,9 @@
 <body>
   <div class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
-      <nav class="top-bar">
-        <section class="left">
-          <a class="left-off-canvas-toggle menu-icon" href="#" id="title"><span>Happy Camper</span></a>
+      <nav class="tab-bar">
+        <section class="left-small">
+          <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
         </section>
 
         <section class="top-bar-section">
