--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -38,29 +38,35 @@
 <div class="row">
 
   <div class="medium-7 medium-centered columns" id="box">
-    <h3> Here is Some Gear Appropriate for your Trip <br> from users near your destination </h3> 
+    <h3> Here is Some Gear Appropriate for your Trip <br> from users near your destination </h3>
   </div>
   <ul class="small-block-grid-1 medium-block-grid-3">
   <li><div class="text-center" id="box">
     <ul>
-      <% @sleepingbags.each do |sleepingbag| %>
-        <li> <%= link_to sleepingbag.name, sleepingbag %> : <%= sleepingbag.user.username %></li>
+      <% unless @sleepingbags.nil? %>
+        <% @sleepingbags.each do |sleepingbag| %>
+          <li> <%= link_to sleepingbag.name, sleepingbag %> : <%= sleepingbag.user.username %></li>
+        <% end %>
       <% end %>
     </ul>
   </div></li>
 
   <li><div class="text-center" id="box">
     <ul>
-      <% @backpacks.each do |backpack| %>
-        <li> <%= link_to backpack.name, backpack %> : <%= backpack.user.username %></li>
+      <% unless @backpacks.nil? %>
+        <% @backpacks.each do |backpack| %>
+          <li> <%= link_to backpack.name, backpack %> : <%= backpack.user.username %></li>
+        <% end %>
       <% end %>
     </ul>
   </div></li>
 
   <li><div class="text-center" id="box">
     <ul>
-      <% @tent.each do |tent| %>
-        <li> <%= link_to tent.name, tent %> : <%= tent.user.username %></li>
+      <% unless @tents.nil? %>
+        <% @tents.each do |tent| %>
+          <li> <%= link_to tent.name, tent %> : <%= tent.user.username %></li>
+        <% end %>
       <% end %>
     </ul>
   </div></li>
