--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -37,8 +37,8 @@
 
 <div class="row">
 
-  <div class="medium-7 medium-centered columns" id="box">
-    <h3> Here is Some Gear Appropriate for your Trip <br> from users near your destination </h3>
+  <div class="medium-7 medium-centered text-center columns" id="box">
+    <h4> Here is Some Gear Appropriate for your Trip <br> from users near your destination </h4>
   </div>
   <ul class="small-block-grid-1 medium-block-grid-3">
   <li><div class="text-center" id="box">
