searches and trip planner working (finally)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,3 +75,8 @@ h1, h2, h3, h4, h5, h6 {
 .off-canvas-wrap, .off-canvas-wrap > .inner-wrap {
   min-height: 100vh;
 }
+
+#map-canvas {
+  width: 500px;
+  height: 400px;
+}
