--- a/app/views/backpacks/index.html.erb
+++ b/app/views/backpacks/index.html.erb
@@ -12,6 +12,9 @@
       <% end %>
     </ul>
   </div>
+  <div class="medium-6 columns float right"id="map_wrapper">
+      <div id="map_canvas" class="mapping"></div>
+  </div>
 </div>
 <br>
 <div class="row">
