--- a/app/views/backpacks/show.html.erb
+++ b/app/views/backpacks/show.html.erb
@@ -39,4 +39,13 @@
       <% end %>
     <% end %>
   </div>
+  <div class="medium-8 columns float left">
+    <iframe
+      width="400"
+      height="350"
+      frameborder="0" style="border:0"
+      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCmHdYYjMw-RpkTL2MXZXUn0oJVy3P3DW4
+        &q=<%= @backpack.user.location %>" allowfullscreen>
+    </iframe>
+  </div>
 </div>
