--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@
 #panel, #flip {
     padding: 5px;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.6);
     border: solid 1px #c3c3c3;
 }
 
@@ -54,7 +54,7 @@ ul {
 }
 
 #box {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 a {
@@ -76,7 +76,11 @@ h1, h2, h3, h4, h5, h6 {
   min-height: 100vh;
 }
 
-#map-canvas {
-  width: 500px;
-  height: 400px;
+#map_wrapper {
+    height: 400px;
+}
+
+#map_canvas {
+    width: 100%;
+    height: 100%;
 }
