add titles to list of gear on trips index

--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -42,6 +42,7 @@
   </div>
   <ul class="small-block-grid-1 medium-block-grid-3">
   <li><div class="text-center" id="box">
+    <h5> Sleepingbags </h5>
     <ul>
       <% unless @sleepingbags.nil? %>
         <% @sleepingbags.each do |sleepingbag| %>
@@ -52,6 +53,7 @@
   </div></li>
 
   <li><div class="text-center" id="box">
+    <h5> Backpacks </h5>
     <ul>
       <% unless @backpacks.nil? %>
         <% @backpacks.each do |backpack| %>
@@ -62,6 +64,7 @@
   </div></li>
 
   <li><div class="text-center" id="box">
+    <h5> Tents </h5>
     <ul>
       <% unless @tents.nil? %>
         <% @tents.each do |tent| %>
