--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,11 +76,5 @@ h1, h2, h3, h4, h5, h6 {
   min-height: 100vh;
 }
 
-#map_wrapper {
-    height: 400px;
-}
-
-#map_canvas {
-    width: 100%;
-    height: 100%;
-}
+#map label { width: auto; display:inline; }
+#map img { max-width: none; }
