--- a/app/views/backpacks/index.html.erb
+++ b/app/views/backpacks/index.html.erb
@@ -12,8 +12,8 @@
       <% end %>
     </ul>
   </div>
-  <div class="medium-6 columns float right"id="map_wrapper">
-      <div id="map_canvas" class="mapping"></div>
+  <div class="medium-7 columns float right">
+    <div id="map" style='width: 500px; height: 400px;'></div>
   </div>
 </div>
 <br>
@@ -22,3 +22,14 @@
     <h6><%= paginate @backpacks %></h6>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(function() {
+    var handler = Gmaps.build('Google');
+    handler.buildMap({ internal: {id: 'map'}}, function(){
+      var markers = handler.addMarkers(<%=raw @hash.to_json %>);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+    });
+  });
+</script>
